# War-Strategy

./: README.md
backend/: package.json  tsconfig.json
backend/prisma/: schema.prisma
backend/src/: db.ts  index.ts
backend/src/api/: server.ts
backend/src/services/: conflictDetector.ts  pumpFunListener.ts  resourceMapper.ts  spotBuyer.ts
frontend/: package.json  tailwind.config.ts  tsconfig.json
frontend/app/: layout.tsx  page.tsx
frontend/app/balance-sheet/: layout.tsx  page.tsx
frontend/app/conflicts/: layout.tsx  page.tsx
frontend/app/tokenomics/: layout.tsx  page.tsx
frontend/components/: BalanceSheetVisualization.tsx  ConflictMap.tsx  ConflictMapContainer.tsx  Footer.tsx  Navbar.tsx
frontend/components/ui/: card.tsx
frontend/lib/: api.ts
frontend/styles/: globals.css
on-chain/: Anchor.toml  package.json
on-chain/programs/wstr-treasury/: Cargo.toml
on-chain/programs/wstr-treasury/src/: lib.rs
on-chain/tests/: wstr-treasury.ts
